# libcuid2

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .sonarcloud.properties  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SECURITY.md  sonar-project.properties  vcpkg-configuration.json  vcpkg.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  build_issue.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml
cmake/: cuid2Config.cmake.in
cmake/vcpkg/ports/: README.md
cmake/vcpkg/ports/boost-endian/: portfile.cmake  vcpkg.json
cmake/vcpkg/ports/boost-multiprecision/: portfile.cmake  vcpkg.json
cmake/vcpkg/ports/boost-nowide/: portfile.cmake  vcpkg.json
cmake/vcpkg/ports/boost-test/: portfile.cmake  vcpkg.json
cmake/vcpkg/ports/fmt/: portfile.cmake  vcpkg.json
cmake/vcpkg/ports/openssl/: portfile.cmake  vcpkg.json
cmake/vcpkg/triplets/: arm64-freebsd-dynamic.cmake  arm64-netbsd-dynamic.cmake  arm64-openbsd-dynamic.cmake  arm64-windows-dynamic.cmake  x64-freebsd-dynamic.cmake  x64-netbsd-dynamic.cmake  x64-openbsd-dynamic.cmake
debian/: README.md  build-ppa.sh  changelog  control  copyright  cuid2gen.install  cuid2gen.manpages  gbp.conf  libcuid2-0.install  libcuid2-dev.install  libcuid2-dev.manpages  not-installed  rules  watch
debian/source/: options
include/cuid2/: counter.hpp  cuid2.hpp  cuid2_export.hpp  fingerprint.hpp  platform.hpp  utils.hpp
man/: LOCALIZATION.md  README.md
man/de/: README.md
man/es/: README.md
man/fr/: README.md
man/it/: README.md
man/ja/: README.md
man/ko/: README.md
man/man1/: cuid2gen.1
man/man3/: libcuid2.3
man/man7/: libcuid2.7
man/pl/: README.md
man/pt/: README.md
man/pt_BR/: README.md
man/ru/: README.md
man/zh_CN/: README.md
rpm/: README.md  libcuid2.spec
src/: counter.cpp  cuid2.cpp  cuid2gen.cpp  fingerprint.cpp  platform.cpp  utils.cpp
tests/: .clang-tidy  counter_test.cpp  cuid2_test.cpp  fingerprint_test.cpp  platform_test.cpp  utils_test.cpp
triplets/: x64-windows-dynamic.cmake
